Project Description
-------------------
zenTrack is a highly configurable tracking system based
on a flexible and high quality code base designed for small
to medium-large businesses.

It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database
abstraction, and endless possibilities for project expansion.
--------------------

2009-02-06, alberts -- REVISION 51
  Fix incorrect totals in project task list, tt#8222
    - trunk/includes/zenTrack.class.php

----- VERSION 2.6.4 (2009-01-24) -----

2009-01-24, Kato -- REVISION 50
  Final release prep
    - trunk/install/README.txt
    - trunk/install/utils/upgrade_base.sql
    - trunk/INSTALL.txt
    - trunk/RELEASE_NOTES.txt
    - trunk/UPGRADE.txt

2009-01-23, alberts -- REVISION 49
  CSS fix for 'show all logs' label and checkbox tt#8221
    - trunk/www/styles.php

2009-01-01, Kato -- REVISION 48
  Integrated DPD branch, including: egate fixes, new REST API,
  flex customer portal
    - branches/DPD-2.7 [many files]

2008-11-03, Kato -- REVISION 46
  Finished ticket create via api
  Corrected success="true" in list_users
   - branches/DPD-2.7/includes/ZenHttpApi.php
  Added install files and updated instructions
    - branches/DPD-2.7/UPGRADE.txt
    - branches/DPD-2.7/INSTALL.txt
    - branches/DPD-2.7/RELEASE_NOTES.txt
    - branches/DPD-2.7/install/build_mysql.sql
    - branches/DPD-2.7/install/build_mssqlserver.sql
    - branches/DPD-2.7/install/build_postgres.sql
    - branches/DPD-2.7/install/build_oracle.sql
    - branches/DPD-2.7/install/seed_mssqlserver.sql
    - branches/DPD-2.7/install/seed_mysql.sql
    - branches/DPD-2.7/install/seed_oracle.sql
    - branches/DPD-2.7/install/seed_postgres.sql
    - branches/DPD-2.7/install/UPGRADE_mssqlserver.sql
    - branches/DPD-2.7/install/UPGRADE_mysql.sql
    - branches/DPD-2.7/install/UPGRADE_oracle.sql
    - branches/DPD-2.7/install/UPGRADE_postgres.sql